# enumfactory

./: .gitignore  CLAUDE.md  CMakeLists.txt  Enum_Factory_Explanation.md  INSTRUCTIONS.md  Makefile  README.md  enumfactory.c  enumfactory.h  enumfactory_test  enumfactorymacros.h  enumfactorytest  enumfactorytest.c  enumfactorytest.h
.agent/skills/macro_doc/: SKILL.md
.agent/skills/test_gen/: SKILL.md
.claude/: settings.local.json
.github/workflows/: release.yml
enumfactory/: CMakeLists.txt  Makefile  enumfactory.h
enumfactory/include/: enumfactorymacros.h
enumfactory/src/: enumfactory.c
enumfactory/test/: test_enumfactorymacros.h
examples/: stock_market_example.c
include/: enumfactorymacros.h
src/: enumfactory.c
test/: enumfactory_test.c
tests/: enumfactory_test.c
